fix: lighten gradients on hero banner slideshow for visibility

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3589,9 +3589,19 @@ input[type="date"], input[type="time"], input[type="datetime-local"], input[type
   --tw-gradient-stops: var(--tw-gradient-from), rgb(0 0 0 / 0.2) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
+.via-card\/20 {
+  --tw-gradient-to: rgb(var(--color-card) / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-card) / 0.2) var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
 .via-card\/40 {
   --tw-gradient-to: rgb(var(--color-card) / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-card) / 0.4) var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.via-card\/50 {
+  --tw-gradient-to: rgb(var(--color-card) / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), rgb(var(--color-card) / 0.5) var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
 .via-card\/80 {
